# android_kernel_LIO_kirin990_103

./: .gitmodules  Kconfig  Makefile  README.md  README_Version.txt  bin_desc.csv
arch/: Kconfig
block/: Kconfig  Makefile  bio.c  blk-cgroup.c  blk-core.c  blk-exec.c  blk-flush.c  blk-merge.c  blk-mq-debugfs.c  blk-mq-sched.c  blk-mq-sysfs.c  blk-mq-tag.c  blk-mq-tag.h  blk-mq.c  blk-mq.h  blk-settings.c  blk-sysfs.c  blk-throttle.c  blk.h  blk_iosmart.c  bounce.c  bsg.c  elevator.c  fsck_boost.c  genhd.c  ioctl.c  scsi_ioctl.c
crypto/: Kconfig  Makefile  sha1_generic.c
drivers/: Kconfig  Makefile
drivers/connectivity/hi11xx/hi1105/wifi/hwal/: CMakeLists.txt  driver_hisi_common.h  driver_hisi_lib_api.h  hwal.cmake  hwal_app_ioctl.c  hwal_app_ioctl.h  hwal_event.c  hwal_event.h  hwal_include.cmake  hwal_net.c  hwal_net.h  hwal_wpa_ioctl.c  hwal_wpa_ioctl.h
fs/: Kconfig  Makefile  aio.c  block_dev.c  buffer.c  dax.c  direct-io.c  drop_caches.c  exec.c  file.c  file_table.c  fs-writeback.c  inode.c  internal.h  io_uring.c  mpage.c  namei.c  namespace.c  nsfs.c  open.c  pipe.c  read_write.c  readdir.c  splice.c  stat.c  statfs.c  super.c  sync.c  timerfd.c  userfaultfd.c  xattr.c
init/: Kconfig  Makefile  do_mounts_initrd.c  main.c
ipc/: sem.c
kernel/: Kconfig.preempt  Makefile  cfi.c  check_mmap_sem.c  cpu.c  cred.c  dfx_watchdog.c  dfx_watchdog.h  exit.c  fork.c  freezer.c  futex.c  huawei_hung_task.c  huawei_init_watchdog.c  hung_task.c  kallsyms.c  lock_trace.c  module.c  panic.c  ptrace.c  reboot.c  seccomp.c  signal.c  smp.c  softirq.c  stop_machine.c  (+5 more)
(+10516 files in other folders)
